# mlp

./: .gitignore  README.md  Run-MLPScenarios.ps1  main.py  pyproject.toml
src/: mlp.py
src/base/: mlp_base.py
src/funcs/: activations.py  softmax.py
src/loss/: cross_entropy.py  lasso.py  mae.py  mse.py  ridge.py  rmse.py
src/utils/: classify_metrics.py  dump.py  flatten.py  init_weights.py  one_hot.py  plots.py  r2score.py  soft_labels.py  variance.py
