[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlp"
version = "0.1.0"
description = "MLP from-scratch implementation only with NumPy, it supports regression and classification tasks."
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
authors = [{ email = "pmarianjustin@gmail.com", name = "Justin Marian" }]

dependencies = [
  "numpy>=2.3.3",
  "matplotlib>=3.7",
  "scikit-learn>=1.3",
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
  "black==25.9.0",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 120
target-version = ["py311", "py312", "py313"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W", "PL"]
ignore = []

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
